--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://dpartner.github.io/keto-diet-test",
   "scripts": {
     "dev": "parcel src/*.html src/*.js src/*.php src/phpmailer/*.php",
-    "build": "parcel build src/*.html src/*.js src/*.php src/phpmailer/*.php"
+    "build": "parcel build src/*.html --public-url /keto-diet-test/"
   },
   "repository": {
     "type": "git",
